# mpc-signing-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  SECURITY.md  build.rs  codecov.yml  deny.toml  docker-compose.cluster.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/runbooks/: README.md  dkg-ceremony.md  incident-response.md  key-rotation.md  node-restore.md
proto/: mpc_signing.proto
scripts/: gen-mtls.sh  run-mpc-node.sh
src/: audit.rs  config.rs  domain.rs  lib.rs  main.rs  mtls.rs  policy.rs  store.rs  wallet.rs
src/audit/: mod.rs
src/config/: mod.rs
src/enclave/: attestation.rs  mod.rs  store.rs
src/engine/: custody.rs  dfns.rs  fireblocks.rs  local.rs  mod.rs  noop.rs  turnkey.rs
src/engine/threshold/: cluster.rs  curve.rs  mod.rs  shamir.rs
src/grpc/: json_codec.rs  mod.rs  service.rs
src/node/: mod.rs
src/policy/: mod.rs
src/proto/: mod.rs
src/provider/: mod.rs
src/wallet/: mod.rs
tests/: adapters.rs  container_smoke.rs  custody_adapter.rs  grpc_e2e.rs  mpc_rounds.rs  mtls_handshake.rs  wallet_interop.rs  wallet_json_grpc.rs
