[package]
name = "mpc-signing-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "mpc_signing_service"
path = "src/lib.rs"

[[bin]]
name = "mpc-signing-service"
path = "src/main.rs"

[features]
# v1 ships with a custody provider; the in-house threshold engine is gated.
default = ["in-house"]
in-house = []
fireblocks = []
dfns = []
turnkey = []

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tower = "0.4"
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
ff = "0.13"
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
rdkafka = { version = "0.36", features = ["tokio"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
proptest = "1"
wiremock = "0.6"
rcgen = "0.13"

[build-dependencies]
tonic-build = "0.12"
